Fixed bug #47771 (Exception during object construction from arg call calls object's destructor)